# skills-4-hire-backend

./: .dockerignore  .gitignore  Dockerfile  FEED_RECOMMENDATION_SYSTEM.md  README.md  build.sh  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: deploy.yml
backend/: .dockerignore  Dockerfile  build.sh  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  conftest.py  db.database  docker-compose.yml  file.txt  main.py  manage.py  orm_script.py  pytest.ini  requirements.txt
backend/apps/authentication/: admin.py  backends.py  consumers.py  exceptions.py  helpers.py  middleware.py  models.py  one_time_password.py  otp_models.py  routing.py  serializers.py  serilaizers.py  signals.py  tests.py  urls.py  views.py
backend/apps/bookings/: admin.py  apps.py  booking_transaction.py  exceptions.py  helpers.py  models.py  paginations.py  permissions.py  serializers.py  services.py  signals.py  tasks.py  urls.py  views.py
backend/apps/chats/: admin.py  apps.py  consumers.py  models.py  permissions.py  routing.py  serializers.py  signals.py  urls.py  views.py
backend/apps/core/: api_exceptions.py  exceptions.py  renderers.py
backend/apps/notification/: __init__.py  admin.py  apps.py  consumers.py  events.py  helpers.py  models.py  paginations.py  permissions.py  routings.py  urls.py  (+4 more)
backend/config/: __init__.py  asgi.py  celery.py  drf_yasg.py  health_check.py  services.py  urls.py  wsgi.py
backend/nginx/: default.conf
backend/tests/: .gitignore  settings.py
nginx/: Dockerfile  default.conf  nginx.conf
nginx/conf.d/: prod.conf
(+289 files in other folders)
